# AudioEdit

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/models/: job.py
app/schemas/: job.py
app/services/: binary_store.py  job_service.py  job_store.py  media_tools.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/services/: job_service.py  job_store.py  media_tools.py
frontend/: package.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
interface/: index.html  package-lock.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
interface/src/: App.tsx  AudioPreview.tsx  api.ts  styles.css  types.ts
